@@ -10,6 +10,7 @@ Enhancements
 Bug Fixes
 ---------
 Fix text/background/border color actions by using KoColorPopupAction (if pigment is built).
+Fix map/sheet protection action.
 208868: Fix action triggering on selection changes, which resulted in style changes.
 Fix cell removal by shifting cells up.
 
